commit 5: cards are correctly aligned

--- a/test-code/styles.css
+++ b/test-code/styles.css
@@ -10,6 +10,9 @@ button {
     padding: 0;
     font-family: "Quicksand";
 }
+body{
+    height: 200vh;
+}
 
 /* header div */
 div#header {
@@ -94,14 +97,25 @@ p#services-p{
 /* =========================cards at the bottom of the page==================== */
 div#cards-wrapper{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, max-content);
+    gap: 2vw;
     text-align: center;
     margin-top: 5vh;
-    border: 3px solid red;
+    /* border: 3px solid red; */
+    justify-content: center;
 }
 div#card{
-    border: 3px solid blue;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+    /* width: 100%; */
+    max-width: 300px;
+    text-align: center;
+    align-items: center;
+    height: 100%;
+    border-radius: 10px;
+    
+
 }
 img#card-img{
+    border-radius: 10px;
     width: 100%;
 }
